--- a/ProyectoCinepolis/src/main/java/presentacion/ctlogo/MenuCatalogo.form
+++ b/ProyectoCinepolis/src/main/java/presentacion/ctlogo/MenuCatalogo.form
@@ -643,8 +643,8 @@
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                   <Table columnCount="2" rowCount="2">
-                    <Column editable="true" title="Pelicula" type="java.lang.Object"/>
-                    <Column editable="true" title="Ver funciones" type="java.lang.Object"/>
+                    <Column editable="false" title="Pelicula" type="java.lang.Object"/>
+                    <Column editable="false" title="Ver funciones" type="java.lang.Object"/>
                   </Table>
                 </Property>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
