--- a/ProyectoCinepolis/src/main/java/presentacion/ctlogo/frmAgregarPeli.form
+++ b/ProyectoCinepolis/src/main/java/presentacion/ctlogo/frmAgregarPeli.form
@@ -165,11 +165,14 @@
                                           <Component id="jLabel5" alignment="0" max="32767" attributes="0"/>
                                       </Group>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <Group type="103" groupAlignment="1" attributes="0">
-                                              <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
-                                              <Component id="cmbxDuracion" min="-2" pref="66" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Group type="102" attributes="0">
+                                                  <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
+                                                  <Component id="jLabel4" min="-2" max="-2" attributes="0"/>
+                                              </Group>
+                                              <Component id="cmbxDuracion" min="-2" pref="79" max="-2" attributes="0"/>
                                           </Group>
-                                          <EmptySpace max="-2" attributes="0"/>
+                                          <EmptySpace type="separate" max="-2" attributes="0"/>
                                           <Component id="jLabel11" min="-2" max="-2" attributes="0"/>
                                       </Group>
                                       <Component id="txtTituloPeli" alignment="0" min="-2" pref="196" max="-2" attributes="0"/>
@@ -418,18 +421,22 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Base Neue" size="10" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Minutos"/>
+            <Property name="text" type="java.lang.String" value="HH:MM:SS"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="cmbxDuracion">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="5">
-                <StringItem index="0" value="0"/>
-                <StringItem index="1" value="30"/>
-                <StringItem index="2" value="60"/>
-                <StringItem index="3" value="120"/>
-                <StringItem index="4" value="340"/>
+              <StringArray count="9">
+                <StringItem index="0" value="&lt;None&gt;"/>
+                <StringItem index="1" value="00:30:00"/>
+                <StringItem index="2" value="01:00:00"/>
+                <StringItem index="3" value="01:30:00"/>
+                <StringItem index="4" value="02:00:00"/>
+                <StringItem index="5" value="02:30:00"/>
+                <StringItem index="6" value="03:00:00"/>
+                <StringItem index="7" value="03:30:00"/>
+                <StringItem index="8" value="04:00:00"/>
               </StringArray>
             </Property>
           </Properties>
@@ -448,7 +455,6 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Segoe UI" size="18" style="1"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="FOTO"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="btnExaminar">
