--- a/ProyectoCinepolis/src/main/java/presentacion/ctlogo/frmFuncionesPelis.form
+++ b/ProyectoCinepolis/src/main/java/presentacion/ctlogo/frmFuncionesPelis.form
@@ -262,7 +262,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="(NOmbre)"/>
+        <Property name="text" type="java.lang.String" value="aladin"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="BtnComprarFuncion">
